# argo-metadata-validator

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  environment-tox.yml  pyproject.toml  ruff.toml  tox.ini
.github/workflows/: ci.yml  python-app.yml  release.yml
.gitlab/merge_request_templates/: default.md
argo_metadata_validator/: __init__.py  __main__.py  cli.py  exceptions.py  schema_utils.py  validation.py  vocab_utils.py
argo_metadata_validator/models/: results.py
demos/: README.md  argo_validator.ipynb  demo_script.py
tests/: __init__.py  test_schema_utils.py  test_utils.py  test_vocab_utils.py
tests/files/: invalid_sensor.json  sensor_deprecated_vocab.json  valid_float.json  valid_platform.json  valid_sensor.json
tests/integration_tests/: test_file_parsing.py  test_file_validation.py
tests/integration_tests/files/: valid_float.json
tests/unit_tests/: test_cli_utils.py  test_schema_utils.py  test_utils.py  test_validation.py  test_vocab_utils.py
